# compass-rs

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md
src/: account.rs  config.rs  main.rs  state.rs
src/aave/: helpers.rs  mod.rs  pool.rs
src/api/: balance.rs  chat.rs  debug.rs  earnings.rs  error.rs  funded.rs  health.rs  markets.rs  mod.rs  policy.rs  position.rs  recover.rs  send_to_wallet.rs  session.rs  strategy.rs  withdraw.rs
src/automation/: chat_history.rs  executor.rs  mod.rs  position.rs  risk_gate.rs  scheduler.rs  session_cache.rs  snapshot.rs  tick.rs
src/automation/audit/: mod.rs  postgres_store.rs  schema.rs  store.rs
src/automation/evaluator/: mod.rs  types.rs
src/automation/funding/: mod.rs  postgres_store.rs  schema.rs  store.rs
src/automation/policy/: mod.rs  postgres_store.rs  schema.rs  store.rs
src/automation/workers/: mod.rs  position.rs  snapshot.rs
src/chain/: arbitrum_sepolia.rs  arc.rs  mod.rs  usdc.rs
src/contracts/: mod.rs
src/core/llm/: anthropic.rs  chain.rs  chat_agent.rs  chat_engine.rs  config.rs  mod.rs  openai_compatible.rs  provider.rs  skills.rs  sse_event.rs  stream.rs  stream_parser.rs  tool_context.rs  tool_dispatch.rs  types.rs
src/core/llm/tools/: aave_tools.rs  account_tools.rs  gateway_tools.rs  (+3 more)
src/gateway/: api.rs  contracts.rs  intent.rs  mod.rs
src/skills/chat/: skill.md
src/skills/core/: skill.md
src/skills/onchain/: skill.md
src/skills/setup/: skill.md
src/skills/strategies/: balanced.md  conservative.md  growth.md
src/userop/: builder.rs  mod.rs  paymaster.rs  submit.rs
(+17 files in other folders)
