[package]
name = "compass-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
dotenvy = "0.15"

reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "stream"] }

async-trait = "0.1"
futures = "0.3"
async-stream = "0.3"
bytes = "1"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
uuid = { version = "1", features = ["v4"] }

alloy = { version = "1.0.41", features = ["full"] }

sqlx = { version = "0.8", default-features = false, features = [
  "runtime-tokio-rustls",
  "postgres",
  "json",
  "chrono",
  "macros",
] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
